# munchkin-gpt

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  configurator.py  requirements.txt  sample.py  setup.cfg  train.py
etc/dataset/openwebtext/: config.env
etc/dataset/shakespeare/: config.env
etc/dataset/shakespeare_char/: config.env
etc/training/: openwebtext.env  shakespeare-char.env  shakespeare.env
munchkin/: data.py  generate.py  main.py  model.py  settings.py  train.py  utils.py
munchkin/cli/: __init__.py  cli.py  data.py  model.py
