[metadata]
name = munchkin-gpt
version = 0.1.0
author = Caltech IMSS ADS, Andrej Karpathy
author_email = imss-ads-staff@caltech.edu
url = https://github.com/caltechads/munchkin-gpt
description = A small, fast, cheap, and simple GPT model implementation
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Documentation = https://munchkin-gpt.readthedocs.io/en/latest/
    Source = https://github.com/caltechads/munchkin-gpt
    Issues = https://github.com/caltechads/munchkin-gpt/issues

[options]
zip_safe = False
platforms = any
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
  pydantic >= 2.0.0
  pydantic-settings
  click >= 8.0
  torch
  numpy
  datasets
  tiktoken
  wandb
  tqdm

[options.entry_points]
console_scripts =
  munchkin = munchkin.main:main

[bdist_wheel]
universal = 1


# -------
# Linters
# -------

[flake8]
max-line-length: 120
filename: *.py
exclude: *.cfg, *.js, *.json, *.bak, *.md, *.sql, *.sh, *.txt, *.yml, simple_test_db, Makefile, Dockerfile, MANIFEST.in
# E221:  multiple spaces before operator
# E241:  multiple spaces after :
# E265:  block comment should start with #
# E266:  too many leading # for block comment
# E401:  multiple imports on one line
ignore = E221,E241,E265,E266,E401,W503,W504,W605,E731
per-file-ignores =
  botocraft/services/*.py: E501

[pylint.FORMAT]
max-line-length=120

[pylint.MESSAGES CONTROL]
disable=
    missing-docstring,
    protected-access,
    unused-argument,
    invalid-name,
    too-few-public-methods,
    attribute-defined-outside-init,
    consider-using-f-string,
    too-many-lines,
    no-member,
    redefined-builtin,
    unsubscriptable-object,
    unnecessary-lambda-assignment

[mypy]
python_executable: ~/.pyenv/shims/python
plugins = pydantic.mypy
exclude = (?x)(^build)

[mypy-sphinx_rtd_theme.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-datasets.*]
ignore_missing_imports = True

[mypy-transformers.*]
ignore_missing_imports = True

[mypy-requests.*]
ignore_missing_imports = True

[mypy-tqdm.*]
ignore_missing_imports = True